syntax = "proto3";
package vesta.twin;

option go_package = "vesta/x/twin/types";

message TrainingState {
  bool value = 1;
  string name = 2;
}
